--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -211,13 +211,15 @@
                                         <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish?d.RatingNameCurEng:d.RatingNameCurFre) @(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish?d.CompetencyLevelReqDescCurEng:d.CompetencyLevelReqDescCurFre)</p>
                                     </div>
                                     <header class="modal-header">
                                         <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
                                     </header>
                                     <div class="modal-body">
-                                        <p>@(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish?d.RatingNameObjEng:d.RatingNameObjFre) @(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish?d.CompetencyLevelReqDescObjEng:d.CompetencyLevelReqDescObjFre)</p>
                                     </div>
                                 </section>
                             </td>
@@ -273,13 +275,15 @@
                                         <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish?d.RatingNameCurEng:d.RatingNameCurFre) @(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish?d.CompetencyLevelReqDescCurEng:d.CompetencyLevelReqDescCurFre)</p>
                                     </div>
                                     <header class="modal-header">
                                         <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
                                     </header>
                                     <div class="modal-body">
-                                        <p>@(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish?d.RatingNameObjEng:d.RatingNameObjFre) @(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish?d.CompetencyLevelReqDescObjEng:d.CompetencyLevelReqDescObjFre)</p>
                                     </div>
                                 </section>
                             </td>
@@ -335,13 +339,15 @@
                                         <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish?d.RatingNameCurEng:d.RatingNameCurFre) @(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish?d.CompetencyLevelReqDescCurEng:d.CompetencyLevelReqDescCurFre)</p>
                                     </div>
                                     <header class="modal-header">
                                         <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
                                     </header>
                                     <div class="modal-body">
-                                        <p>@(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish?d.RatingNameObjEng:d.RatingNameObjFre) @(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish?d.CompetencyLevelReqDescObjEng:d.CompetencyLevelReqDescObjFre)</p>
                                     </div>
                                 </section>
                             </td>
