--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -16,8 +16,8 @@
         <table class="table table-bordered table-responsive" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tbody>
                 <tr>
-                    <td class="bg-success" width="50%"><b>@Localizer["Current Position"]:</b> @Model.CurrentPosition.JobGroupCode @Model.CurrentPosition.JobGroupLevelValue - @(isEnglish? Model.CurrentPosition.JobTitleEng: Model.CurrentPosition.JobTitleFre)</td>
-                    <td class="bg-info" width="50%"><b>@Localizer["Selected Position"]:</b> @Model.ObjectivePosition.JobGroupCode @Model.ObjectivePosition.JobGroupLevelValue - @(isEnglish? Model.ObjectivePosition.JobTitleEng: Model.ObjectivePosition.JobTitleFre)</td>
+                    <td class="bg-success" width="50%"><b>@Localizer["Current Position"]:</b> @Model.CurrentPosition.JobGroupCode @Model.CurrentPosition.JobGroupLevelValue - @(isEnglish ? Model.CurrentPosition.JobTitleEng : Model.CurrentPosition.JobTitleFre)</td>
+                    <td class="bg-info" width="50%"><b>@Localizer["Selected Position"]:</b> @Model.ObjectivePosition.JobGroupCode @Model.ObjectivePosition.JobGroupLevelValue - @(isEnglish ? Model.ObjectivePosition.JobTitleEng : Model.ObjectivePosition.JobTitleFre)</td>
                 </tr>
             </tbody>
         </table>
@@ -29,7 +29,7 @@
                 <table class="table table-responsive table-bordered">
                     <thead>
                         <tr>
-                            <th style="background-color:#f2f2f2" width="100%">@Localizer["CERTIFICATIONS"]</th>
+                            <th style="background-color:#f2f2f2">@Localizer["CERTIFICATIONS"]</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -55,7 +55,7 @@
                 <table class="table table-responsive table-bordered">
                     <thead>
                         <tr>
-                            <th style="background-color:#f2f2f2" width="100%">@Localizer["TECHNICAL ELEMENTS"]</th>
+                            <th style="background-color:#f2f2f2">@Localizer["TECHNICAL ELEMENTS"]</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -84,7 +84,7 @@
                 <table class="table table-responsive table-bordered">
                     <thead>
                         <tr>
-                            <th style="background-color:#f2f2f2" width="100%">@Localizer["KNOWLEDGE ELEMENTS"]</th>
+                            <th style="background-color:#f2f2f2">@Localizer["KNOWLEDGE ELEMENTS"]</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -110,7 +110,7 @@
                 <table class="table table-responsive table-bordered">
                     <thead>
                         <tr>
-                            <th style="background-color:#f2f2f2" width="100%">@Localizer["BEHAVIOURAL ELEMENTS"]</th>
+                            <th style="background-color:#f2f2f2">@Localizer["BEHAVIOURAL ELEMENTS"]</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -120,14 +120,14 @@
                                 <td>@Localizer["NoMatchingType3"]</td>
                             </tr>
                         }
-                        else 
-                        { 
+                        else
+                        {
                          @foreach (var c in Model.MatchingCompetenciesType3)
-                             {
+                         {
                                   <tr>
                                      <td>@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</td>
                                   </tr>
-                              }
+                         }
                         }
                     </tbody>
                 </table>
@@ -158,7 +158,6 @@
                     @foreach (var d in Model.DifferingCertificates)
                     {
                         <tr>
-
                             <td width="70%">@d.NameEng</td>
                             <td class="text-center bg-success">&nbsp;</td>
                             <td class="text-center bg-info">&nbsp;</td>
@@ -193,13 +192,13 @@
                         var key2 = "b" + d.CompetencyId.ToString();
                         <tr>
                             <td>
-                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">@(isEnglish?d.CompetencyNameEng:d.CompetencyNameFre)</a>
+                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">@(isEnglish ? d.CompetencyNameEng : d.CompetencyNameFre)</a>
                                 <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
                                     <header class="modal-header">
-                                        <h2 class="modal-title">@(isEnglish?d.CompetencyNameEng:d.CompetencyNameFre)</h2>
+                                        <h2 class="modal-title">@(isEnglish ? d.CompetencyNameEng : d.CompetencyNameFre)</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.CompetencyDescEng:d.CompetencyDescFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyDescEng : d.CompetencyDescFre)</p>
                                         <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                     </div>
                                 </section>
@@ -211,15 +210,15 @@
                                         <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.RatingNameCurEng:d.RatingNameCurFre) @(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
-                                        <p>@(isEnglish?d.CompetencyLevelReqDescCurEng:d.CompetencyLevelReqDescCurFre)</p>
+                                        <p>@(isEnglish ? d.RatingNameCurEng : d.RatingNameCurFre) @(isEnglish ? d.RatingDescCurEng : d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyLevelReqDescCurEng : d.CompetencyLevelReqDescCurFre)</p>
                                     </div>
                                     <header class="modal-header">
                                         <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
                                     </header>
                                     <div class="modal-body">
-                                        <p>@(isEnglish?d.RatingNameObjEng:d.RatingNameObjFre) @(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
-                                        <p>@(isEnglish?d.CompetencyLevelReqDescObjEng:d.CompetencyLevelReqDescObjFre)</p>
+                                        <p>@(isEnglish ? d.RatingNameObjEng : d.RatingNameObjFre) @(isEnglish ? d.RatingDescObjEng : d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyLevelReqDescObjEng : d.CompetencyLevelReqDescObjFre)</p>
                                     </div>
                                 </section>
                             </td>
@@ -257,13 +256,13 @@
                         var key2 = "d" + d.CompetencyId.ToString();
                         <tr>
                             <td>
-                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">@(isEnglish?d.CompetencyNameEng:d.CompetencyNameFre)</a>
+                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">@(isEnglish ? d.CompetencyNameEng : d.CompetencyNameFre)</a>
                                 <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
                                     <header class="modal-header">
-                                        <h2 class="modal-title">@(isEnglish?d.CompetencyNameEng:d.CompetencyNameFre)</h2>
+                                        <h2 class="modal-title">@(isEnglish ? d.CompetencyNameEng : d.CompetencyNameFre)</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.CompetencyDescEng:d.CompetencyDescFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyDescEng : d.CompetencyDescFre)</p>
                                         <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                     </div>
                                 </section>
@@ -275,15 +274,15 @@
                                         <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.RatingNameCurEng:d.RatingNameCurFre) @(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
-                                        <p>@(isEnglish?d.CompetencyLevelReqDescCurEng:d.CompetencyLevelReqDescCurFre)</p>
+                                        <p>@(isEnglish ? d.RatingNameCurEng : d.RatingNameCurFre) @(isEnglish ? d.RatingDescCurEng : d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyLevelReqDescCurEng : d.CompetencyLevelReqDescCurFre)</p>
                                     </div>
                                     <header class="modal-header">
                                         <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
                                     </header>
                                     <div class="modal-body">
-                                        <p>@(isEnglish?d.RatingNameObjEng:d.RatingNameObjFre) @(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
-                                        <p>@(isEnglish?d.CompetencyLevelReqDescObjEng:d.CompetencyLevelReqDescObjFre)</p>
+                                        <p>@(isEnglish ? d.RatingNameObjEng : d.RatingNameObjFre) @(isEnglish ? d.RatingDescObjEng : d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyLevelReqDescObjEng : d.CompetencyLevelReqDescObjFre)</p>
                                     </div>
                                 </section>
                             </td>
@@ -321,13 +320,13 @@
                         var key2 = "f" + d.CompetencyId.ToString();
                         <tr>
                             <td>
-                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">@(isEnglish?d.CompetencyNameEng:d.CompetencyNameFre)</a>
+                                <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">@(isEnglish ? d.CompetencyNameEng : d.CompetencyNameFre)</a>
                                 <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
                                     <header class="modal-header">
-                                        <h2 class="modal-title">@(isEnglish?d.CompetencyNameEng:d.CompetencyNameFre)</h2>
+                                        <h2 class="modal-title">@(isEnglish ? d.CompetencyNameEng : d.CompetencyNameFre)</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.CompetencyDescEng:d.CompetencyDescFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyDescEng : d.CompetencyDescFre)</p>
                                         <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                     </div>
                                 </section>
@@ -339,15 +338,15 @@
                                         <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
                                     </header>
                                     <div class="modal-body ">
-                                        <p>@(isEnglish?d.RatingNameCurEng:d.RatingNameCurFre) @(isEnglish?d.RatingDescCurEng:d.RatingDescCurFre)</p>
-                                        <p>@(isEnglish?d.CompetencyLevelReqDescCurEng:d.CompetencyLevelReqDescCurFre)</p>
+                                        <p>@(isEnglish ? d.RatingNameCurEng : d.RatingNameCurFre) @(isEnglish ? d.RatingDescCurEng : d.RatingDescCurFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyLevelReqDescCurEng : d.CompetencyLevelReqDescCurFre)</p>
                                     </div>
                                     <header class="modal-header">
                                         <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
                                     </header>
                                     <div class="modal-body">
-                                        <p>@(isEnglish?d.RatingNameObjEng:d.RatingNameObjFre) @(isEnglish?d.RatingDescObjEng:d.RatingDescObjFre)</p>
-                                        <p>@(isEnglish?d.CompetencyLevelReqDescObjEng:d.CompetencyLevelReqDescObjFre)</p>
+                                        <p>@(isEnglish ? d.RatingNameObjEng : d.RatingNameObjFre) @(isEnglish ? d.RatingDescObjEng : d.RatingDescObjFre)</p>
+                                        <p>@(isEnglish ? d.CompetencyLevelReqDescObjEng : d.CompetencyLevelReqDescObjFre)</p>
                                     </div>
                                 </section>
                             </td>
@@ -360,3 +359,24 @@
             </tbody>
         </table>
     </section>
+    <div class="row">
+        <div class="col-lg-12 mrgn-bttm-md">
+            <nav role="navigation" class="mrgn-bttm-lg">
+
+                <h2 class="wb-inv">Document navigation</h2>
+
+                <ul class="pager">
+                    @{
+                        var routedata = new Dictionary<string, string>
+                    {
+           { "positionid",  Model.PositionId.ToString()},
+           { "obj",  Model.Obj.ToString() },
+          { "id",  Model.Id.ToString()},
+                     { "level",  Model.Level.ToString() }
+                    };
+                    }
+                    <li class="previous"><a asp-page="ObjectivePosition" asp-all-route-data="routedata">@Localizer["Previous"]</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
