--- a/Web/Pages/CCGMember/CurrentPosition.cshtml
+++ b/Web/Pages/CCGMember/CurrentPosition.cshtml
@@ -1,9 +1,7 @@
 ﻿@page
 @model Web.Pages.CCGMember.CurrentPositionModel
 @inject IViewLocalizer Localizer
-@{ 
-    var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
-}
+@{ var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en"; }
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -34,10 +32,10 @@
 }
         </ul>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-9">
         <label><b>@Localizer["Position"]</b></label><br />
         <button class="dropdown-toggle" id="menu1" type="button" width="100%" data-toggle="dropdown">
-            @Localizer["Select Position"]
+            @(Model.PositionId == 0 ? Localizer["Select Position"].Value : (isEnglish ? Model.Position.JobTitleEng : Model.Position.JobTitleFre))
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
@@ -50,19 +48,32 @@
                         { "level",  Model.Level.ToString()},
                         { "positionid", jp.JobTitleId.ToString()}
                      };
-<li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-all-route-data="routedata">@(isEnglish ? jp.JobTitleEng : jp.JobTitleFre)</a></li>
-
+<li role="presentation"><a role="menuitem" tabindex="-1" asp-page="CurrentPosition" asp-all-route-data="routedata">@(isEnglish ? jp.JobTitleEng : jp.JobTitleFre)</a></li>
 }
-
         </ul>
     </div>
 </div>
+@{var routedataprevious = new Dictionary<string, string>
+{
+    { "id",  Model.Id.ToString()},
+    };
+}
+
 <div class="row">
-    <div class="col-sm-12 mrgn-bttm-md">
+    <div class="col-lg-12 mrgn-bttm-md">
         <nav role="navigation" class="mrgn-bttm-lg">
             <h2 class="wb-inv">Document navigation</h2>
             <ul class="pager">
-                <li class="previous"><a asp-page="CurrentLevel" asp-route-id="@Model.Id">@Localizer["Previous"]</a></li>
+                <li class="previous"><a asp-page="CurrentLevel" asp-all-route-data="routedataprevious">@Localizer["Previous"]</a></li>
+                @if (Model.PositionId != 0) {
+                    var routedatanext = new Dictionary<string, string>
+                        {
+                             { "id",  Model.Id.ToString()},
+                             { "level",  Model.Level.ToString()},
+                             { "positionid", Model.PositionId.ToString()}
+                         };
+                <li class="next"><a asp-page="Details" asp-all-route-data="routedatanext">@Localizer["Next"]</a></li>
+                }
             </ul>
         </nav>
     </div>
