--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -4,7 +4,7 @@
 
 
 <h2><b>@Localizer["Question1"]</b></h2>
-<a asp-page="" asp-route-positionid="@Model.PositionId">
+<a asp-page="Similar/SimilarSearch" asp-route-positionid="@Model.PositionId">
     <div class="col-sm-4 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/similar.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
