--- a/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
@@ -59,7 +59,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-12 mrgn-tp-md">
+    <div class="col-sm-9 col-lg-offset-3 mrgn-tp-md">
         @{var routedatanext = new Dictionary<string, string>
          {
         { "id",  Model.Id.ToString()},
