--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -13,6 +13,7 @@
 </div>
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["SIMILAR POSITIONS"]</h3>
+    <h4>@Model.Positions.Count @Localizer["POSITIONS"]</h4>
     <table class="table table-hover table-responsive table-bordered">
         <thead>
             <tr>
@@ -27,7 +28,7 @@
                 <tr>
                     <td>@position.JobGroupCode-@position.JobLevelValue</td>
                     <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
-                    <td><a asp-page="SimilarDetails" asp-route-positionid="@Model.PositionId" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="SimilarDetails" asp-route-positionid="@position.JobTitleId" role="button">@Localizer["More Details"]</a></td>
                 </tr>
             }
         </tbody>
