similar updates/home button

--- a/Web/Pages/CCGMember/CCGMember.cshtml
+++ b/Web/Pages/CCGMember/CCGMember.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Web.Pages.CCGMember.CCGMemberModel
 @inject IViewLocalizer Localizer
-
+<a class="btn btn-primary pull-right mrgn-rght-md" type="button" asp-page="../Index">@Localizer["Home"]</a>
 <h2><b>@Localizer["Question1"]</b></h2>
 <a asp-page="">
     <div class="col-sm-3 mrgn-bttm-md">
