--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -13,7 +13,7 @@
 </div>
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["SIMILAR POSITIONS"]</h3>
-    <h4>@Model.Positions.Count @Localizer["POSITIONS"]</h4>
+    <h4>@Model.Positions.Length @Localizer["POSITION(S)"]</h4>
     <table class="table table-hover table-responsive table-bordered">
         <thead>
             <tr>
