--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -7,6 +7,7 @@
 }
 <section role="contentinfo">
     <div class="col-md-12">
+        <a class="btn btn-primary pull-right mrgn-rght-md" type="button" asp-page="../Index">@Localizer["Home"]</a>
         <h2><b>@Localizer["AllPositions"]</b></h2>
         <form>
             <p>
@@ -15,25 +16,25 @@
             </p>
         </form>
         <form>
-      @if (Model.JobGroups.Any(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
-        {
-          @foreach (var jobgroup in Model.JobGroups.Where(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
-           {
-        <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
-            <div class="col-sm-4 mrgn-bttm-md">
-                <figure>
-                    <img src="@Url.Content(imagefolder + jobgroup.Code + ".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-                    <figcaption class="text-center"><h6>@(isEnglish ? jobgroup.NameEng : jobgroup.NameFre) (@jobgroup.Code)</h6></figcaption>
-                </figure>
-            </div>
-        </a>
-        }
-      }
-      else
-       {
-        <h4>@Localizer["NoResults"]</h4>
-        }
-      </form>
+            @if (Model.JobGroups.Any(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
+            {
+                @foreach (var jobgroup in Model.JobGroups.Where(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
+                {
+                    <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
+                        <div class="col-sm-4 mrgn-bttm-md">
+                            <figure>
+                                <img src="@Url.Content(imagefolder + jobgroup.Code + ".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                <figcaption class="text-center"><h6>@(isEnglish ? jobgroup.NameEng : jobgroup.NameFre) (@jobgroup.Code)</h6></figcaption>
+                            </figure>
+                        </div>
+                    </a>
+                }
+            }
+            else
+            {
+                <h4>@Localizer["NoResults"]</h4>
+            }
+        </form>
     </div>
 </section>
 
